// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should remove from mailing list 1`] = `
Array [
  Object {
    "acceptedMarketing": false,
    "email": "lee@daily.dev",
    "id": "1",
    "image": "https://daily.dev/ido.jpg",
    "infoConfirmed": true,
    "name": "Ido",
    "permalink": "https://daily.dev/ido",
    "reputation": 5,
    "username": "idoshamun",
  },
  "ido@daily.dev",
  Array [
    "85a1951f-5f0c-459f-bf5e-e5c742986a50",
  ],
]
`;

exports[`should update mailing list 1`] = `
Array [
  Object {
    "acceptedMarketing": true,
    "email": "lee@daily.dev",
    "id": "1",
    "image": "https://daily.dev/ido.jpg",
    "infoConfirmed": true,
    "name": "Ido",
    "permalink": "https://daily.dev/ido",
    "reputation": 5,
    "username": "idoshamun",
  },
  "ido@daily.dev",
  Array [
    "85a1951f-5f0c-459f-bf5e-e5c742986a50",
    "53d09271-fd3f-4e38-ac21-095bf4f52de6",
  ],
]
`;
